--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yabat-air-conditioning",
   "private": true,
-  "homepage": "https://amit9021.github.io/yabat",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
